--- a/htmlprac/index.html
+++ b/htmlprac/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color: #FFFFFF; margin-top: 0px; margin-left: 0px; margin-right: 0px;">
-        <nav id="navbar"></nav>>
+        <nav id="navbar"></nav>
 
         <script>
             fetch('navbar.html')
@@ -23,4 +23,5 @@
             여전히 간단한 테스트를 위한 문구
         </p>
     </body>
+
 </html>
