--- a/htmlprac/goog.html
+++ b/htmlprac/goog.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css"
     </head>
     <body style="background-color: #FFFFFF; margin-top: 0px; margin-left: 0px; margin-right: 0px;">
-        <nav id="navbar"></nav>>
+        <nav id="navbar"></nav>
 
         <script>
             fetch('navbar.html')
@@ -20,3 +20,4 @@
         <h1>여기는 구글<img src="google.jpg" width=75px style="margin-left: 20px;"></h1>
     </body>
 </html>
+
