--- a/htmlprac/nave.html
+++ b/htmlprac/nave.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color: #FFFFFF; margin-top: 0px; margin-left: 0px; margin-right: 0px;">
-        <nav id="navbar"></nav>>
+        <nav id="navbar"></nav>
 
         <script>
             fetch('navbar.html')
@@ -22,3 +22,4 @@
         <p></p>
     </body>
 </html>
+
